--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:h2:~/hackday/db;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=sa
 handlebars.cache=false
+spring.jpa.hibernate.ddl-auto=update
