feat: 관리자 로그인 기능 구현 (#27)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 handlebars.cache=false
 spring.jpa.hibernate.ddl-auto=update
+
+admin.id=adminuserid
+admin.password=adminuserpassword
