--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,8 @@ spring.datasource.password=sa
 handlebars.cache=false
 spring.jpa.hibernate.ddl-auto=update
 
-admin.id=adminuserid
-admin.password=adminuserpassword
+
+admin.id=ENC(Ihlq6TTXfUzA2yfVGZtaGlvjsEpT+z0P)
+admin.password=ENC(U+YNWGCcVJq3j7DbAGcVh204HI48B/sm)
+
+jasypt.encryptor.bean=jasyptStringEncryptor
