--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.ulisesbocchio</groupId>
-			<artifactId>jasypt-spring-boot</artifactId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
 			<version>2.1.0</version>
 		</dependency>
 	</dependencies>
